--- a/apps/queryRunnerJ/view/query.html
+++ b/apps/queryRunnerJ/view/query.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>ProjectVA - making html based VIDEO and MTV at your fingertips</title>
+  <title>queryRunnerJ - demo webapp using jQuery integration with elasticsearch</title>
   <!-- [step] set the base url... geee -->
   <!-- base href="/lab.html" -->
   <meta charset="UTF-8">
