--- a/apps/queryRunnerJ/view/query.html
+++ b/apps/queryRunnerJ/view/query.html
@@ -56,7 +56,8 @@
 
       <div class="">
         <button class='btn light-blue lighten-1' onclick="runQuery()">run</button>
-        <button class='btn teal lighten-1' onclick='resetTQuery()'>reset query</button>
+        <button class='btn teal lighten-1' onclick='resetTQuery()'>reset</button>
+        <button class='btn red lighten-1' onclick='getESIndices()'>indices</button>
       </div>
 
       <div id='dResultPane' class="hiding">
