--- a/apps/shopExpress/public/part/css/shop.css
+++ b/apps/shopExpress/public/part/css/shop.css
@@ -44,5 +44,28 @@
   border: 1px solid rgba(102,102,102,0.6);
 }
 
+._s_search_bar_text {
+  min-width: 300px;
+  padding-right: 4px; padding-left: 4px;
+}
+._s_search_bar_button {
+  padding-left: 8px;
+  padding-right: 8px;
+  padding-top: 3px;
+  padding-bottom: 9px;
+
+  position: relative;
+  left: -5px;
+
+  border-top-right-radius: 4px;
+  border-bottom-right-radius: 4px;
+
+  border-top: 1px solid #ccc;
+  border-bottom: 1px solid #ccc;
+  border-right: 1px solid #ccc;
+}
+._s_search_bar_button:hover {
+  background-color: #fff;
+}
 
 #### shop home specific (end)
