--- a/apps/shopExpress/public/part/css/shop.css
+++ b/apps/shopExpress/public/part/css/shop.css
@@ -68,4 +68,10 @@
   background-color: #fff;
 }
 
+._s_carousel_image_dimen {
+  /*width: 940px; height: 650px;*/
+  max-width: 1200px;
+  height: 280px;
+}
+
 #### shop home specific (end)
