--- a/apps/carsInUK/src/app/module/view/landingPageComponent.html
+++ b/apps/carsInUK/src/app/module/view/landingPageComponent.html
@@ -17,7 +17,7 @@
 
           <!-- google map -->
           <div [ngClass]='_getClassForGMapPane()' style="padding: 1px;">
-            <div style="border: 1px solid;">gmap area</div>
+            <div id='gMap' class='gmap_container'></div>
           </div>
 
         </div>
