--- a/apps/carsInUK/src/app/component/search/view/searchComponent.html
+++ b/apps/carsInUK/src/app/component/search/view/searchComponent.html
@@ -18,6 +18,7 @@
   </div>
 </div>
 
+<query-dlg-component></query-dlg-component>
 
 <div>
   <!--search and advance search-->
@@ -41,6 +42,11 @@
         style="color: #555; border-radius: 20px; margin: 2px; padding-left: 13px; padding-right: 13px; padding-top: 12px; padding-bottom: 12px;"
         (click)='toggleLayout()'
         data-toggle='tooltip' data-placement="left" title="toggle screen layout"></i>
+      <!-- query tooltip -->
+      <i class="fa fa-lg fa-wrench query_tooltip pointer"
+        (click)='showQueryDlg_basicQuery()'
+        data-toggle='tooltip' data-placement="left" title="show query...">
+      </i>
     </div>
 
   </div>
