--- a/apps/lecture/public/clientView/view/lectureContainer.html
+++ b/apps/lecture/public/clientView/view/lectureContainer.html
@@ -15,6 +15,7 @@
 
   <!-- weird, the media queries are being overrided somehow (put it here seems working again) -->
   <link rel='stylesheet' href='/css/style.css'>
+  <link rel='stylesheet' href='/css/color-scheme.css'>
 
   <!-- MDB required jscript lib -->
   <!-- JQuery -->
