--- a/apps/lecture/public/css/style.css
+++ b/apps/lecture/public/css/style.css
@@ -1,5 +1,7 @@
 
-
+.pointer {
+  cursor: pointer;
+}
 
 .hiding {
   display: none;
@@ -128,6 +130,21 @@
 }
 .lecture-sidemenu-subitem-label {
   font-size: 13px;
+}
+
+.lecture-chapter-container {
+  margin-top: 20px; margin-bottom: 20px;
+}
+.code-snippet-header {
+  background: #eee;
+  border: 1px solid #ccc;
+  padding: 6px;
+  font-size: 14px;
+}
+.code-snippet-content {
+  width: calc(100%); height: 200px;
+  border: 1px solid #ccc;
+  border-top: 0px;
 }
 
 @media only screen and (max-width: 499px) {
