--- a/apps/lecture/public/clientView/view/lectureContainer.html
+++ b/apps/lecture/public/clientView/view/lectureContainer.html
@@ -29,7 +29,7 @@
   <!-- the js files for the app -->
   <!-- ######################## -->
   <script type="text/javascript" src="/clientJS/elasticsearch-js-13_1/elasticsearch.jquery.js"></script>
-  <script type="text/javascript" src="/clientJS/query.js"></script>
+  <!-- script type="text/javascript" src="/clientJS/query.js"></script -->
   <script type="text/javascript" src="/clientJS/es.js"></script>
   <script type="text/javascript" src="/clientJS/lecture.js"></script>
 
