--- a/apps/lecture/public/clientView/view/lectureContainer.html
+++ b/apps/lecture/public/clientView/view/lectureContainer.html
@@ -41,8 +41,8 @@
 <header>
   <div id='lecture-container'></div>
 
-
-  <div class="lecture-section-container">
+  <!-- ** obselete, use the vue.js component approach ** -->
+  <!--div class="lecture-section-container">
     run a query using event-handler:
     <button class="btn btn-sm btn-secondary" onclick="chp02.runQueryEventHandler()">go</button>
     <div class='lecture-result-div' id='divRes_1'></div>
@@ -58,7 +58,7 @@
     run a query using filterPath:
     <button class="btn btn-sm btn-secondary" onclick="chp02.runQueryWithFilterPath()">go</button>
     <div class='lecture-result-div' id='divRes_3'></div>
-  </div>
+  </div-->
 
 </body>
 <script type="text/javascript" src="/clientView/build/build-lectureContainer.js"></script>
