--- a/apps/lecture/public/css/style.css
+++ b/apps/lecture/public/css/style.css
@@ -195,6 +195,8 @@
   border-bottom: 1px solid #6d4c41;
   border-left: 1px solid #6d4c41;
   border-right: 1px solid #6d4c41;
+
+  overflow: auto;
 }
 
 
