--- a/apps/lecture/public/clientView/view/lectureContainer.html
+++ b/apps/lecture/public/clientView/view/lectureContainer.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>queryRunnerJ - demo webapp using jQuery integration with elasticsearch</title>
+  <title>Lecture demos page</title>
   <!-- [step] set the base url... geee -->
   <!-- base href="/lab.html" -->
   <meta charset="UTF-8">
