--- a/apps/jeymartECommerce/public/clientView/view/shop.html
+++ b/apps/jeymartECommerce/public/clientView/view/shop.html
@@ -6,6 +6,7 @@
 
   <link rel='stylesheet' href='/css/style.css'>
   <link rel='stylesheet' href='/css/shop-header-navigator.css'>
+  <link rel='stylesheet' href='/css/shop-searchbar.css'>
 
   <!-- ################################ -->
   <!-- using MDB (metal design bootstrap) -->
