--- a/apps/jeymartECommerce/public/clientView/view/shop.html
+++ b/apps/jeymartECommerce/public/clientView/view/shop.html
@@ -7,6 +7,7 @@
   <link rel='stylesheet' href='/css/style.css'>
   <link rel='stylesheet' href='/css/shop-header-navigator.css'>
   <link rel='stylesheet' href='/css/shop-searchbar.css'>
+  <link rel='stylesheet' href='/css/shop-carousel.css'>
 
   <!-- ################################ -->
   <!-- using MDB (metal design bootstrap) -->
