--- a/apps/jeymartECommerce/public/clientView/view/shop.html
+++ b/apps/jeymartECommerce/public/clientView/view/shop.html
@@ -8,6 +8,7 @@
   <link rel='stylesheet' href='/css/shop-header-navigator.css'>
   <link rel='stylesheet' href='/css/shop-searchbar.css'>
   <link rel='stylesheet' href='/css/shop-carousel.css'>
+  <link rel='stylesheet' href='/css/shop-spy-panel.css'>
 
   <!-- ################################ -->
   <!-- using MDB (metal design bootstrap) -->
@@ -19,6 +20,8 @@
   <!-- MDB required jscript lib -->
   <!-- JQuery -->
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.js"></script>
+  <!-- popper.js tooltip -->
+  <!-- script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.13.0/popper.min.js"></script -->
   <!-- Bootstrap tooltips -->
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.js"></script>
   <!-- Bootstrap core JavaScript -->
