--- a/apps/jeymartECommerce/public/clientView/view/shop.html
+++ b/apps/jeymartECommerce/public/clientView/view/shop.html
@@ -9,6 +9,7 @@
   <link rel='stylesheet' href='/css/shop-searchbar.css'>
   <link rel='stylesheet' href='/css/shop-carousel.css'>
   <link rel='stylesheet' href='/css/shop-spy-panel.css'>
+  <link rel='stylesheet' href='/css/shop-facets-control.css'>
 
   <!-- ################################ -->
   <!-- using MDB (metal design bootstrap) -->
