--- a/apps/jeymartECommerce/public/clientView/view/redirectToShop.html
+++ b/apps/jeymartECommerce/public/clientView/view/redirectToShop.html
@@ -6,7 +6,7 @@
 
 
   <script>
-    window.location='clientView/view/shop.html'
+    window.location='clientView/view/shop.html#/main'
   </script>
 </body>
 </html>
