--- a/apps/jeymartECommerce/public/clientView/view/shop.html
+++ b/apps/jeymartECommerce/public/clientView/view/shop.html
@@ -11,6 +11,7 @@
   <link rel='stylesheet' href='/css/shop-spy-panel.css'>
   <link rel='stylesheet' href='/css/shop-facets-control.css'>
   <link rel='stylesheet' href='/css/shop-product-display-top5.css'>
+  <link rel='stylesheet' href='/css/shop-landing-listing.css'>
 
   <!-- ################################ -->
   <!-- using MDB (metal design bootstrap) -->
