--- a/apps/jeymartECommerce/public/clientView/view/shop.html
+++ b/apps/jeymartECommerce/public/clientView/view/shop.html
@@ -13,6 +13,7 @@
   <link rel='stylesheet' href='/css/shop-product-display-top5.css'>
   <link rel='stylesheet' href='/css/shop-landing-listing.css'>
   <link rel='stylesheet' href='/css/shop-item-details-suggestion.css'>
+  <link rel='stylesheet' href='/css/shop-adv-search-panel.css'>
 
   <!-- ################################ -->
   <!-- using MDB (metal design bootstrap) -->
