--- a/apps/nycTaxiHub/public/clientView/view/redirectToNycTaxiHub.html
+++ b/apps/nycTaxiHub/public/clientView/view/redirectToNycTaxiHub.html
@@ -6,7 +6,7 @@
 
 
   <script>
-    window.location='clientView/view/nycTaxiHub.html#/main'
+    window.location='clientView/view/nycTaxiHub.html'
   </script>
 </body>
 </html>
