--- a/apps/nycTaxiHub/public/clientView/view/nycTaxiHub.html
+++ b/apps/nycTaxiHub/public/clientView/view/nycTaxiHub.html
@@ -9,6 +9,7 @@
   <link rel='stylesheet' href='/css/nyc-header-navigator.css'>
   <link rel='stylesheet' href='/css/nyc-control-panel.css'>
   <link rel='stylesheet' href='/css/nyc-gmap.css'>
+  <link rel='stylesheet' href='/css/spy-panel.css'>
 
   <!-- ################################ -->
   <!-- using MDB (metal design bootstrap) -->
