--- a/apps/labEngine/public/clientView/view/engine.html
+++ b/apps/labEngine/public/clientView/view/engine.html
@@ -57,7 +57,7 @@
             </div>
           </div>
         </div>
-        <button class="btn btn-amber pointer">run</button>
+        <button class="btn btn-amber pointer" id='btnRunQuery' >run</button>
 
         <!-- result div -->
         <div style="margin-top: 8px; margin-bottom: 2px;">
@@ -76,7 +76,7 @@
         </input>
         <div id='divCodeView' class='hiding'>
           <textarea id='txtCode' class='txtCodeView'
-            placeholder="enter customize code here, code be any javascript code (but NEVER provide such feature in production!)"></textarea>
+            placeholder="enter customize code here, code be any javascript code (but NEVER provide such feature in production!) To access the returned 'data' from elasticsearch, simply call 'this.data' "></textarea>
         </div>
         <div class='divResult' ></div>
 
