--- a/apps/labEngine/public/clientView/view/engine.html
+++ b/apps/labEngine/public/clientView/view/engine.html
@@ -76,7 +76,7 @@
         </input>
         <div id='divCodeView' class='hiding'>
           <textarea id='txtCode' class='txtCodeView'
-            placeholder="enter customize code here, code be any javascript code (but NEVER provide such feature in production!) To access the returned 'data' from elasticsearch, simply call 'this.data' "></textarea>
+            placeholder="enter customize code here, code be any javascript code (but NEVER provide such feature in production!) &#10;&#10;PS. To access the returned 'data' from elasticsearch, simply call 'this.data' "></textarea>
         </div>
         <div class='divResult' ></div>
 
